[gd_scene format=3 uid="uid://cq2g8ebw34rqx"]

[ext_resource type="SpriteFrames" uid="uid://nhwss1he74jt" path="res://Sprites/CruiserThrusterSprites.tres" id="1_5uy6h"]
[ext_resource type="Script" uid="uid://bc785wh64tb28" path="res://scripts/enemy.gd" id="1_xwavj"]
[ext_resource type="SpriteFrames" uid="uid://csldfhvvocscj" path="res://Sprites/BackTurretSprites.tres" id="2_c4w8v"]
[ext_resource type="Script" uid="uid://dgeg3n8kbsb73" path="res://scripts/turret.gd" id="2_xwavj"]
[ext_resource type="SpriteFrames" uid="uid://bo1oeril35fvh" path="res://Sprites/CruiserBridgeSprites.tres" id="3_xwavj"]
[ext_resource type="SpriteFrames" uid="uid://d0j12pk4pdtak" path="res://Sprites/FrontTurretSprites.tres" id="4_nenq2"]
[ext_resource type="PackedScene" uid="uid://dwdl67ovuocti" path="res://scenes/laser_turret.tscn" id="5_nenq2"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dwvs7"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 20.23, 1)
gravity = Vector3(-100, 0, 0)
scale_min = 3.0
scale_max = 6.0
color = Color(0, 1, 1, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5uy6h"]
radius = 13.25
height = 38.0

[sub_resource type="CircleShape2D" id="CircleShape2D_c4w8v"]
radius = 8.503675

[sub_resource type="Animation" id="Animation_nenq2"]
resource_name = "Death"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Thruster:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.033333335, 8.066667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-10, 0), Vector2(-34.285, 11.61)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bridge:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 8.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(8, -1), Vector2(46.355, 13.315)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../GPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.33333334),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Thruster:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.03333334, 8.066667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.1308996938995747]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Bridge:rotation")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.033333335, 8.166666),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.33161255787892263]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.06666667, 7.266667, 9.566667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_0h1x2"]
resource_name = "Hidden"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../FTLParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Thruster/ThrusterParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.033333335),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Thruster/ThrusterTurret/ThrusterTurretCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Bridge/BridgeTurret/BridgeTurretCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(-0.03333334),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_dwvs7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../FTLParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Thruster/ThrusterParticles:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Thruster/ThrusterTurret/ThrusterTurretCollision:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Bridge/BridgeTurret/BridgeTurretCollision:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../GPUParticles2D:emitting")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Thruster:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-10, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Bridge:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, -1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Thruster:rotation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Bridge:rotation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_txv1s"]
resource_name = "Spawn"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3, 3.0666666),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../FTLParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.033333335, 3.2000003),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.8666668, 3, 3.3000002),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.865, 0.29), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(3, 3.166667, 3.4333334),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-210.625, 0), Vector2(0, 0), Vector2(-23.18, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Thruster/ThrusterParticles:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 3.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Thruster/ThrusterTurret/ThrusterTurretCollision:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 3.4),
"transitions": PackedFloat32Array(0, 0),
"update": 1,
"values": [true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Bridge/BridgeTurret/BridgeTurretCollision:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 3.4),
"transitions": PackedFloat32Array(0, 0),
"update": 1,
"values": [true, false]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Thruster/ThrusterTurret")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(3.4333334),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enable_turret_ai"
}]
}
tracks/8/type = "method"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Bridge/BridgeTurret")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(3.4333334),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enable_turret_ai"
}]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath(".:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_txv1s"]
_data = {
&"Death": SubResource("Animation_nenq2"),
&"Hidden": SubResource("Animation_0h1x2"),
&"RESET": SubResource("Animation_dwvs7"),
&"Spawn": SubResource("Animation_txv1s")
}

[sub_resource type="Curve" id="Curve_0h1x2"]
_limits = [0.0, 5.0, 0.0, 1.0]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.70270264, 1.2359552), 0.0, 0.0, 0, 0, Vector2(0.88513505, 5), 0.0, 0.0, 0, 0, Vector2(1, 5), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_dwvs7"]
curve = SubResource("Curve_0h1x2")

[sub_resource type="Gradient" id="Gradient_0h1x2"]
offsets = PackedFloat32Array(0, 0.77868855)
colors = PackedColorArray(0, 0, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_dwvs7"]
gradient = SubResource("Gradient_0h1x2")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0h1x2"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(44.655, 20.615, 1)
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector3(400, 0, 0)
scale_min = 5.0
scale_max = 5.0
color_ramp = SubResource("GradientTexture1D_dwvs7")
alpha_curve = SubResource("CurveTexture_dwvs7")

[sub_resource type="Curve" id="Curve_ijcwa"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.7770271, 0.8089888), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_lvof5"]
curve = SubResource("Curve_ijcwa")

[sub_resource type="Curve" id="Curve_1i8tj"]
_limits = [0.0, 4.0, 0.0, 1.0]
_data = [Vector2(0, 2.067416), 0.0, 0.0, 0, 0, Vector2(0.3445946, 1.2134833), 0.0, 0.0, 0, 0, Vector2(0.7432433, 1.2134833), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_ijcwa"]
curve = SubResource("Curve_1i8tj")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1i8tj"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 25.18
spread = 180.0
initial_velocity_min = 5.0
initial_velocity_max = 70.0
angular_velocity_min = -720.0
angular_velocity_max = 719.99994
gravity = Vector3(0, 0, 0)
linear_accel_min = -53.760002
linear_accel_max = 45.159996
tangential_accel_min = -5.380002
tangential_accel_max = 5.3699975
scale_min = 7.0
scale_max = 8.0
scale_curve = SubResource("CurveTexture_ijcwa")
color = Color(1, 0.42745098, 0.21568628, 1)
emission_curve = SubResource("CurveTexture_lvof5")
turbulence_noise_strength = 0.12

[node name="enemy" type="Area2D" unique_id=2136185547 node_paths=PackedStringArray("turrets")]
texture_filter = 3
scale = Vector2(7, 7)
script = ExtResource("1_xwavj")
turrets = [NodePath("SpritePivot/Thruster/ThrusterTurret"), NodePath("SpritePivot/Bridge/BridgeTurret")]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="." unique_id=1737944176]
scale = Vector2(9.834844, -3.7693896)

[node name="SpritePivot" type="Node2D" parent="." unique_id=247175346]
self_modulate = Color(0, 0, 1, 1)

[node name="Thruster" type="Node2D" parent="SpritePivot" unique_id=309872537]
position = Vector2(-10, 0)

[node name="ThrusterParticles" type="GPUParticles2D" parent="SpritePivot/Thruster" unique_id=1994940803]
position = Vector2(-73.32, -2.75)
amount = 50
process_material = SubResource("ParticleProcessMaterial_dwvs7")

[node name="ThrusterMain" type="AnimatedSprite2D" parent="SpritePivot/Thruster" unique_id=922847472]
texture_filter = 3
position = Vector2(60, -12)
sprite_frames = ExtResource("1_5uy6h")
animation = &"Healthy"

[node name="ThrusterTurret" type="Area2D" parent="SpritePivot/Thruster" unique_id=1173980368 node_paths=PackedStringArray("child_collider", "turret_ai")]
position = Vector2(-50, 0)
collision_layer = 8
collision_mask = 64
input_pickable = false
script = ExtResource("2_xwavj")
child_collider = NodePath("ThrusterTurretCollision")
turret_ai = NodePath("LaserTurret")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="SpritePivot/Thruster/ThrusterTurret" unique_id=872360727]
z_index = 1
position = Vector2(60, -12)
sprite_frames = ExtResource("2_c4w8v")
animation = &"Healthy"
autoplay = "Healthy"
frame_progress = 0.42903677

[node name="ThrusterTurretCollision" type="CollisionShape2D" parent="SpritePivot/Thruster/ThrusterTurret" unique_id=124567631]
position = Vector2(-0.25, -1.5)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_5uy6h")

[node name="LaserTurret" parent="SpritePivot/Thruster/ThrusterTurret" unique_id=2132486732 node_paths=PackedStringArray("ship_parent") instance=ExtResource("5_nenq2")]
ship_parent = NodePath("../../../..")

[node name="Bridge" type="Node2D" parent="SpritePivot" unique_id=1206508805]
position = Vector2(8, -1)

[node name="BridgeMain" type="AnimatedSprite2D" parent="SpritePivot/Bridge" unique_id=263962893]
texture_filter = 3
position = Vector2(42, -9)
sprite_frames = ExtResource("3_xwavj")
animation = &"Healthy"

[node name="BridgeTurret" type="Area2D" parent="SpritePivot/Bridge" unique_id=106237347 node_paths=PackedStringArray("child_collider", "turret_ai")]
position = Vector2(-12, 1)
collision_layer = 8
collision_mask = 64
input_pickable = false
script = ExtResource("2_xwavj")
child_collider = NodePath("BridgeTurretCollision")
turret_ai = NodePath("LaserTurret")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="SpritePivot/Bridge/BridgeTurret" unique_id=725742814]
z_index = 1
texture_filter = 3
position = Vector2(6, -11)
sprite_frames = ExtResource("4_nenq2")
animation = &"Healthy"
autoplay = "Healthy"

[node name="BridgeTurretCollision" type="CollisionShape2D" parent="SpritePivot/Bridge/BridgeTurret" unique_id=2103308756]
position = Vector2(1.75, 0)
shape = SubResource("CircleShape2D_c4w8v")

[node name="LaserTurret" parent="SpritePivot/Bridge/BridgeTurret" unique_id=2014706995 node_paths=PackedStringArray("ship_parent") instance=ExtResource("5_nenq2")]
ship_parent = NodePath("../../../..")

[node name="EnemyAnims" type="AnimationPlayer" parent="SpritePivot" unique_id=760754738]
libraries/ = SubResource("AnimationLibrary_txv1s")
autoplay = &"Hidden"

[node name="FTLParticles" type="GPUParticles2D" parent="." unique_id=43603422]
position = Vector2(-338.25, -0.5)
emitting = false
amount = 300
lifetime = 2.0
process_material = SubResource("ParticleProcessMaterial_0h1x2")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="." unique_id=634216928]
scale = Vector2(10.080251, 4.0511703)

[node name="GPUParticles2D" type="GPUParticles2D" parent="." unique_id=1595295034]
top_level = true
light_mask = 4
visibility_layer = 4
position = Vector2(-265, 0)
scale = Vector2(3.834841, 3.7529428)
emitting = false
amount = 1000
lifetime = 20.0
explosiveness = 1.0
randomness = 0.5
process_material = SubResource("ParticleProcessMaterial_1i8tj")

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="area_entered" from="SpritePivot/Thruster/ThrusterTurret" to="SpritePivot/Thruster/ThrusterTurret" method="_on_area_entered"]
[connection signal="area_entered" from="SpritePivot/Bridge/BridgeTurret" to="SpritePivot/Bridge/BridgeTurret" method="_on_area_entered"]
[connection signal="animation_finished" from="SpritePivot/EnemyAnims" to="." method="_on_enemy_anims_animation_finished"]
[connection signal="finished" from="GPUParticles2D" to="GPUParticles2D" method="_on_finished"]
